--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap"
     rel="stylesheet">
-  <title>DTMoney</title>
+  <title>dtMoney</title>
 </head>
 
 <body>
